<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.graduate.outofclass.ui.view.CircleImageView
            android:id="@+id/circleImageView"
            app:civ_border_color="@color/light"
            app:civ_border_width="2dp"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_100"
            android:layout_centerInParent="true"
            android:layout_margin="@dimen/dp_24"
            android:src="@mipmap/ic_launcher" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_gravity="bottom"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@color/split_line" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"

        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/rl_userName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="30dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_10"
                    android:text="姓名: "
                    android:textColor="@color/black"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_10"
                    android:hint="点击编辑你的个人资料"
                    android:text=""
                    android:textSize="15sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="30dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_10"
                    android:text="学校: "
                    android:textColor="@color/black"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/school"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_10"
                    android:hint="点击编辑你的个人资料"
                    android:text=""
                    android:textSize="15sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="30dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_10"
                    android:text="专业: "
                    android:textColor="@color/black"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/college"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_10"
                    android:hint="点击编辑你的个人资料"
                    android:layout_marginBottom="@dimen/dp_10"
                    android:text=""
                    android:textSize="15sp" />
            </LinearLayout>

        </LinearLayout>


    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_gravity="bottom"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@color/split_line" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:paddingLeft="30dp"
            android:text="个性签名"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/signature"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/iv_userSign"
            android:layout_marginTop="@dimen/dp_10"
            android:background="@null"
            android:hint="请输入你的个性签名"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:textColorHint="@color/colorCursor"
            android:textSize="15sp"
            android:layout_marginBottom="@dimen/dp_10"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_gravity="bottom"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@color/split_line" />

    <LinearLayout
        android:id="@+id/suggestion"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginBottom="1dp"
        android:background="@drawable/setting_selector_bg"
        android:clickable="true"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:text="@string/suggestion"
            android:textColor="@color/black" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_gravity="bottom"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@color/split_line" />

    <LinearLayout
        android:id="@+id/about"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginBottom="1dp"
        android:background="@drawable/setting_selector_bg"
        android:clickable="true"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:text="@string/about"
            android:textColor="@color/black" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_gravity="bottom"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@color/split_line" />

    <LinearLayout
        android:id="@+id/version"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginBottom="1dp"
        android:background="@drawable/setting_selector_bg"
        android:clickable="true"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:text="@string/version"
            android:textColor="@color/black" />
    </LinearLayout>

</LinearLayout>
